Fix spacing in contact details
We used to have whitespace in the generated HTML which added unpredictable
spacing. Using React we can rely on a normalized HTML output and optimize
against that.

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -384,7 +384,7 @@ $avatar-size: 44px;
 }
 
 .contact-details {
-  $left-margin: 8px;
+  $left-margin: 11px;
 
   vertical-align: middle;
   display: inline-block;
